--- a/Magic_Gathering_Prueba/Base.lproj/Main.storyboard
+++ b/Magic_Gathering_Prueba/Base.lproj/Main.storyboard
@@ -226,7 +226,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tipo tarjeta" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nx8-bw-whb">
-                                <rect key="frame" x="15" y="458" width="107" height="27"/>
+                                <rect key="frame" x="15" y="308" width="107" height="27"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="27" id="69v-Yh-85O"/>
                                 </constraints>
@@ -235,22 +235,25 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="XKu-uB-KmI">
-                                <rect key="frame" x="15" y="100" width="384" height="350"/>
+                                <rect key="frame" x="15" y="100" width="384" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="fff-kp-vn1"/>
+                                </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mana" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ruV-8v-XJr">
-                                <rect key="frame" x="15" y="546.66666666666663" width="53" height="27"/>
+                                <rect key="frame" x="15" y="396.66666666666669" width="53" height="27"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Texto descripción" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LX1-jL-sKj">
-                                <rect key="frame" x="15" y="505.00000000000006" width="384" height="21.666666666666686"/>
+                                <rect key="frame" x="15" y="355" width="384" height="21.666666666666686"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Poder" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oPZ-9H-gzu">
-                                <rect key="frame" x="342" y="546.66666666666663" width="57" height="27"/>
+                                <rect key="frame" x="342" y="396.66666666666669" width="57" height="27"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -268,7 +271,6 @@
                             <constraint firstItem="ruV-8v-XJr" firstAttribute="firstBaseline" secondItem="oPZ-9H-gzu" secondAttribute="firstBaseline" id="Tdw-ou-whT"/>
                             <constraint firstItem="eLo-uF-NAu" firstAttribute="trailing" secondItem="LX1-jL-sKj" secondAttribute="trailing" constant="15" id="WJL-rD-5Nk"/>
                             <constraint firstItem="XKu-uB-KmI" firstAttribute="top" secondItem="Cwk-pZ-GjO" secondAttribute="bottom" constant="14" id="aDA-zK-kxo"/>
-                            <constraint firstItem="eLo-uF-NAu" firstAttribute="bottom" secondItem="ruV-8v-XJr" secondAttribute="bottom" constant="162.33333333333337" id="gnX-8t-Kuc"/>
                             <constraint firstItem="oPZ-9H-gzu" firstAttribute="top" secondItem="LX1-jL-sKj" secondAttribute="bottom" constant="20" id="hTk-7i-2iQ"/>
                             <constraint firstItem="nx8-bw-whb" firstAttribute="top" secondItem="XKu-uB-KmI" secondAttribute="bottom" constant="8" symbolic="YES" id="kGk-0f-tXv"/>
                             <constraint firstItem="LX1-jL-sKj" firstAttribute="top" secondItem="nx8-bw-whb" secondAttribute="bottom" constant="20" id="kpD-Cg-WQW"/>
